# vicmap

./: .gitignore  README.md  constants.py  convergence.py  datums.py  ellipsoids.py  geodesy.py  mga.py  placenames.json  projections.py  pyproject.toml  runner.py  test.py  tools.py  utils.py  vicgrid.py  vicgrid94.py
.buildkite/: pipeline.yml
constants/: ellipsoid.py  mga.py  vicgrid.py  vicgrid94.py
data/: nswtopo.json
declination/: geomag.py
geodesy/: datums.py  ellipsoids.py  grids.py  points.py  projections.py  utils.py
tests/: test_convergence.py  test_datums.py  test_ellipsoids.py  test_geodesy.py  test_grids.py  test_mga.py  test_points.py  test_utils.py  test_vicgrid.py  test_vicgrid94.py
tests/test_geodesy/: test_ellipsoids.py  test_grids.py  test_points.py  test_utils.py
tests/test_geodesy/test_projections/: test_lcc.py  test_utm.py
tests/test_projections/: test_lcc.py  test_utm.py
vicmap/: __init__.py  datums.py  ellipsoids.py  grids.py  points.py  projections.py  utils.py
