[tool.poetry]
name = "gda20"
version = "0.1.0"
description = "cartographic tools for working with the MGA & GDA20"
authors = ["Sam <chompar4@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "^1.19.0"
pyproj = "^2.6.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
pytest-cov = "^2.10.1"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
