[tool.poetry]
name = "vicmap"
version = "0.1.0"
description = "cartographic tools for working with the MGA & GDA20"
authors = ["Sam <chompar4@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
numpy = "^1.19.0"
pyproj = "^2.6.1"
geomag = { url = "https://github.com/chompar4/geomag/releases/download/v8.0/geomag-8.0.tar.gz" }
mock = "^4.0.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
pytest = "^5.4.3"
black = "^20.8b1"
isort = "^5.6.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
